--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -610,12 +610,12 @@ $helperImage = new Default_View_Helper_Image();
                                                                 	if(this.indexOf("##")==-1) {
                                                                     	var tagStr = this.split('-');
                                                                         if (tagStr.length == 2 && tagStr[0] != 'licensetype') {
-                                                                        	newFileTags += ',' + tagStr;
+                                                                        	newFileTags += ',' + this;
                                                                         }
                                                                     } else {
                                                                     	var tagStr = this.split('##');
                                                                         if (tagStr.length == 2 && tagStr[0] != 'license') {
-                                                                        	newFileTags += ',' + tagStr;
+                                                                        	newFileTags += ',' + this;
                                                                         }
                                                                     }
                                                                 });
@@ -645,12 +645,12 @@ $helperImage = new Default_View_Helper_Image();
                                                                 	if(this.indexOf("##")==-1) {
                                                                     	var tagStr = this.split('-');
                                                                         if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
-                                                                        	newFileTags += ',' + tagStr;
+                                                                        	newFileTags += ',' + this;
                                                                         }
                                                                     } else {
                                                                     	var tagStr = this.split('##');
                                                                         if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
-                                                                        	newFileTags += ',' + tagStr;
+                                                                        	newFileTags += ',' + this;
                                                                         }
                                                                     }
                                                                 });
@@ -843,12 +843,12 @@ $helperImage = new Default_View_Helper_Image();
                                                             	if(this.indexOf("##")==-1) {
                                                                 	var tagStr = this.split('-');
                                                                     if (tagStr.length == 2 && tagStr[0] != 'licensetype') {
-                                                                    	newFileTags += ',' + tagStr;
+                                                                    	newFileTags += ',' + this;
                                                                     }
                                                                 } else {
                                                                 	var tagStr = this.split('##');
                                                                     if (tagStr.length == 2 && tagStr[0] != 'license') {
-                                                                    	newFileTags += ',' + tagStr;
+                                                                    	newFileTags += ',' + this;
                                                                     }
                                                                 }
                                                             });
@@ -872,12 +872,12 @@ $helperImage = new Default_View_Helper_Image();
                                                             	if(this.indexOf("##")==-1) {
                                                                 	var tagStr = this.split('-');
                                                                     if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
-                                                                    	newFileTags += ',' + tagStr;
+                                                                    	newFileTags += ',' + this;
                                                                     }
                                                                 } else {
                                                                 	var tagStr = this.split('##');
                                                                     if (tagStr.length == 2 && tagStr[0] != 'filetypeid') {
-                                                                    	newFileTags += ',' + tagStr;
+                                                                    	newFileTags += ',' + this;
                                                                     }
                                                                 }
                                                             });
