--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -744,7 +744,7 @@ $this->inlineScript()->appendScript(
                         //+ '<td>' + data.file.type + '</td>'
                         //+ '<td>' + this.type + '</td>'
                         + '<td>'
-                        + '<select id="data-select-filetype' + data.file..id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
+                        + '<select id="data-select-filetype' + data.file.id + '" data-filetype-id=" name="filetype" class="form-control input-sm" style="width: 200px;">'
                         + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                         + '</select>'
                         + '</td>'
