--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -121,6 +121,7 @@ $this->inlineScript()->appendScript(
      data-product-tile=""
      data-addpploadfile-uri=""
      data-updatepploadfile-uri=""
+     data-updatefiletype-uri=""
      data-deletepploadfile-uri=""
      data-deletepploadfiles-uri=""
      data-finalizepploadcollection-uri="">
