--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -1050,6 +1050,7 @@ $this->inlineScript()->appendScript(
             $modalPpload.attr('data-product-version', $(this).attr('data-product-version'));
             $modalPpload.attr('data-addpploadfile-uri', $(this).attr('data-addpploadfile-uri'));
             $modalPpload.attr('data-updatepploadfile-uri', $(this).attr('data-updatepploadfile-uri'));
+            $modalPpload.attr('data-updatefiletype-uri', $(this).attr('data-updatefiletype-uri'));
             $modalPpload.attr('data-deletepploadfile-uri', $(this).attr('data-deletepploadfile-uri'));
             $modalPpload.attr('data-deletepploadfiles-uri', $(this).attr('data-deletepploadfiles-uri'));
             $modalPpload.attr('data-finalizepploadcollection-uri', $(this).attr('data-finalizepploadcollection-uri'));
